# xerotop

./: Cargo.toml  Makefile  README.md  TODO.md
assets/: cc.xeron.xerotop.desktop
src/: bar.rs  config.rs  main.rs  metrics.rs  panels.rs  power.rs  prefs.rs  style.css  taskbar.rs  theme.rs  theme_switch.rs  tray.rs  weather.rs  widgets.rs  x11_lookup.rs
themes/: breeze-light.toml  breeze.toml
www/: index.html
