[package]
name = "xerotop"
version = "0.1.0"
edition = "2024"

[dependencies]
alsa = "0.11.0"
async-channel = "2.5.0"
calloop = "0.14.4"
calloop-wayland-source = "0.4.1"
gtk = { version = "0.10", package = "gtk4" }
gtk4-layer-shell = "0.6"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
