[package]
name = "xerotop"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A gkrellm-style, battery-conscious Wayland (wlroots/layer-shell) system monitor bar in Rust + GTK4."
repository = "https://github.com/LXXero/xerotop"

[dependencies]
alsa = "0.11.0"
async-channel = "2.5.0"
calloop = "0.14.4"
calloop-wayland-source = "0.4.1"
gtk = { version = "0.10", package = "gtk4", features = ["v4_10"] }
gtk4-layer-shell = "0.6"
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
system-tray = "0.8"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
ureq = "3.3.0"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
x11rb = { version = "0.13", default-features = false }
